refactor: harden capability architecture boundaries